# dwd-downloader

./: .deepsource.toml  .gitattributes  .gitignore  Cargo.toml  README.md  dwd-downloader.code-workspace  dwd_online_resources_doc.md
.github/workflows/: publish-dwd.yml
dwd-dl/: Cargo.toml
dwd-dl/crates/radolan/: Cargo.toml  README.md
dwd-dl/crates/radolan/examples/: simple.rs
dwd-dl/crates/radolan/src/: header.rs  lib.rs  record.rs
dwd-dl/crates/radolan/tests/api/: main.rs  radolan.rs
dwd-dl/crates/radolan/tests/api/files/: raa01-yw2017.002_10000-2301010525-dwd---bin
dwd-dl/src/: dwd_source.rs  ideen.md  lib.rs  products.rs  util.rs
dwd-dl/src/products/: climate.rs  evaporation.rs  precipitation.rs  radolan.rs
dwd-dl/src/products/climate/: formats.rs  resolutions.rs
dwd-dl/src/products/climate/resolutions/: climate_annual.rs  climate_daily.rs  climate_monthly.rs
dwd-dl/src/products/evaporation/: decode.rs  formats.rs  resolutions.rs
dwd-dl/src/products/evaporation/resolutions/: evaporation_daily_p.rs  evaporation_daily_r.rs  evaporation_monthly_p.rs  evaporation_monthly_r.rs
dwd-dl/src/products/precipitation/: formats.rs  resolutions.rs
dwd-dl/src/products/precipitation/resolutions/: precipitation_hourly.rs  precipitation_min1.rs  precipitation_min10.rs  precipitation_min5.rs
dwd-dl/src/products/radolan/: decode.rs  formats.rs  resolutions.rs
dwd-dl/src/products/radolan/resolutions/: radolan_daily.rs  radolan_hourly.rs  radolan_hourly_reproc2017.rs  radolan_min5.rs  radolan_min5_reproc2017.rs
dwd-dl/src/util/: compression.rs  download.rs  file.rs  interval.rs  point.rs  regex.rs  time.rs
dwd-dl/src/util/compression/: gz.rs  tar.rs  universal.rs  zip.rs
dwd-dl/src/util/time/: timezone.rs
dwd-dl/tests/: climate.rs  evaporation.rs  precipitation.rs  radolan.rs
dwd-dl/tests/common/: mod.rs
dwd-ui/: .eslintignore  .eslintrc.cjs  .prettierignore  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts
dwd-ui/assets/css/: base.css  inter.css
dwd-ui/components/: CreditsList.vue  DwdCommonForm.vue  DwdProgressDialog.vue  NavBar.vue  UpdateMenu.vue
dwd-ui/pages/: climate.vue  csv.vue  evaporation.vue  index.vue  precipitation.vue  radolan.vue  settings.vue
dwd-ui/presets/wind/: index.js
dwd-ui/presets/wind/inputnumber/: index.js
dwd-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dwd-ui/src-tauri/capabilities/: default.json
dwd-ui/src-tauri/capabilities/schemas/: capabilities.json  macOS-schema.json  plugin-manifests.json
dwd-ui/src-tauri/icons/: icon.icns
dwd-ui/src-tauri/src/: build_info.rs  dwd_command.rs  main.rs
dwd-ui/stores/: dwdRequestFormStore.ts  miscStore.ts  settingsStore.ts
dwd-ui/utils/: bindings.ts  normalizeDateTime.test.ts  normalizeDateTime.ts  throttle.ts  update_check.ts
example_setup/docker/: Caddyfile  docker-compose.yml
example_setup/ftp_data/: .gitignore  files.txt
infos/: evaporation.md  radolan.md
