[workspace]
resolver = "2"
members = ["dwd-dl", "dwd-ui/src-tauri"]

[workspace.dependencies]
crossbeam-channel = "0.5.12"
time = { version = "0.3.36", features = [
    "serde",
    "macros",
    "parsing",
    "formatting",
] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[profile.test]
opt-level = 1
