[package]
name = "dwd-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
byte-unit = "4.0.19"
bytes = "1.5.0"
nom = "7.1.3"
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
specta = { version = "2.0.0-rc.7", features = [
    "typescript",
    "export",
], optional = true }
strum_macros = "0.26.1"
tar = "0.4.40"
thiserror = "1.0.56"
time = { workspace = true }
ureq = "2.9.1"
zip = "0.6.6"
zune-inflate = { version = "0.2.54", default-features = false, features = [
    "gzip",
] }

[features]
specta = ["dep:specta"]
