[package]
name = "dwd-ui"
version = "0.1.0-alpha.1"
description = "Download weather data from DWD with ease"
authors = ["Nick Kotsakidis"]
repository = "https://github.com/Zercerium/dwd-downloader/"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shadow-rs = { version = "0.26.1", default-features = false }

tauri-build = { version = "2.0.0-beta.0", features = [] }

[dependencies]
crossbeam-channel = { workspace = true }
dwd-dl = { path = "../../dwd-dl", features = ["specta"] }
open = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
shadow-rs = { version = "0.26.1", default-features = false }
specta = { version = "2.0.0-rc.7", features = ["typescript", "export"] }
tauri = { version = "2.0.0-beta.1", features = [] }
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"
tauri-plugin-process = "2.0.0-beta.0"
tauri-plugin-shell = "2.0.0-beta.0"
tauri-plugin-store = "2.0.0-beta.0"
tauri-plugin-updater = "2.0.0-beta.0"
tauri-plugin-window-state = "2.0.0-beta.0"
time = { workspace = true }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
